--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 <div class="navbar">
 	<div class="nav-left">
-        <a href="everhack.html"><img src="images/everhack/lite_everhack-ico.png" class="nav-icon">Everhack</a>
+        <a href="index.html#top"><img src="images/everhack/lite_everhack-ico.png" class="nav-icon">Everhack</a>
     </div>
 </div>
 
@@ -268,5 +268,6 @@
 })();
 showSlide(currentSlide);
 </script>
+
 
 </html>
