--- a/index.html
+++ b/index.html
@@ -180,31 +180,31 @@
     <h3>Here you will find the best cheat in the history of redmatch 2. All about the cheat below. ˚ʚ♡ɞ˚</h3>
     <div class="container-content">
       <p>Basic function:</p>
-      <p>AntiShield
-      <p>Aimbot
-      <p>Godmod
-      <p>Esp
-      <p>Infiniti ammo
-      <p>No shake
-      <p>Invisibility (works by fake disconnection)
-      <p>Fly hack
-	  <p>Show radar
-	  <p>No spread
-      <p>Moderators list
-	  <p>Get moderator settings
-	  <p>Get notification when moderator join</p>
+      <p>-AntiShield
+      <p>-Aimbot
+      <p>-Godmod
+      <p>-Esp
+      <p>-Infiniti ammo
+      <p>-No shake
+      <p>-Invisibility (works by fake disconnection)
+      <p>-Fly hack
+	  <p>-Show radar
+	  <p>-No spread
+      <p>-Moderators list
+	  <p>-Get moderator settings
+	  <p>-Get notification when moderator join</p>
     </div>
     <div class="container-content">
       <p>Esp function:</p>
-      <p>Tracers (add lines to targets)
-      <p>Boxes (Visual boxes around targets)
-      <p>Show info (hp, distance, name and etc)</p>
+      <p>-Tracers (add lines to targets)
+      <p>-Boxes (Visual boxes around targets)
+      <p>-Show info (hp, distance, name and etc)</p>
     </div>
     <div class="container-content">
       <p>Advanced settings:</p>
-      <p>Rapid fire (high fire rate)
-	  <p>Set up radius of Aimbot (5-40fov)
-	  <p>Auto upgrade</p>
+      <p>-Rapid fire (high fire rate)
+	  <p>-Set up radius of Aimbot (5-40fov)
+	  <p>-Auto upgrade</p>
 	<div>
 	<h2>Download cheat:<h2>
 	
@@ -271,3 +271,4 @@ showSlide(currentSlide);
 
 
 </html>
+
