--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Everhack.pro</title>
+<link rel="icon" type="image/png" href="./images/everhack/lite_everhack.png">
 <style>
     body {
         margin: 0;
@@ -271,4 +272,5 @@ showSlide(currentSlide);
 
 
 </html>
+
 
