--- a/index.html
+++ b/index.html
@@ -101,9 +101,33 @@
     .container-content {
         margin-top: 40px;
     }
-	.container img {
-		max-width: 800px;
-		height: auto;
+	.container-img {
+		margin-top: 10px;
+		max-width: 600px;
+		height: 100%;
+		width: 100%;
+		border-radius: 10px;
+	}
+	.container-img-center {
+		margin-top: 10px;
+		max-width: 600px;
+		height: 100%;
+		width: 100%;
+		border-radius: 10px;
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+	.container-img-ico {
+	    display: block;
+	    position: relative;
+		margin-top: 10px;
+		max-width: 200px;
+		height: 100%;
+		width: 100%;
+		border-radius: 10px;
+		margin-left: 1px;
+		margin-right: auto;
 	}
    .container-row {
         display: flex;
@@ -178,11 +202,17 @@
 
 <div class="container">
     <h2>Welcome!</h2>
+	  <div class="container-img-ico">
+		<a href=""><img src="images/3.jpg" class="container-img-ico"></a>
+	  </div>
     <h3>Here you will find the best cheat in the history of redmatch 2. All about the cheat below. ˚ʚ♡ɞ˚</h3>
     <div class="container-content">
       <p>Basic function:</p>
       <p>-AntiShield
       <p>-Aimbot
+	  <div class="container-img">
+		<a href=""><img src="images/1.png" class="container-img"></a>
+	  </div>
       <p>-Godmod
       <p>-Esp
       <p>-Infiniti ammo
@@ -194,33 +224,40 @@
       <p>-Moderators list
 	  <p>-Get moderator settings
 	  <p>-Get notification when moderator join</p>
+	  <div class="container-img">
+		<a href=""><img src="images/4.jpg" class="container-img"></a>
+	  </div>
     </div>
     <div class="container-content">
       <p>Esp function:</p>
       <p>-Tracers (add lines to targets)
       <p>-Boxes (Visual boxes around targets)
       <p>-Show info (hp, distance, name and etc)</p>
+	  <div class="container-img">
+		<a href=""><img src="images/banner.jpeg" class="container-img"></a>
+	  </div>
     </div>
     <div class="container-content">
       <p>Advanced settings:</p>
       <p>-Rapid fire (high fire rate)
 	  <p>-Set up radius of Aimbot (5-40fov)
 	  <p>-Auto upgrade</p>
+	  <div class="container-img-ico">
+		<a href=""><img src="images/2.jpg" class="container-img"></a>
+	  </div>
 	<div>
 	<h2>Download cheat:<h2>
-	
-	  
 </div>
 <div class="container-row">
     <div class="box">
         <img src="images/everhack/lite_everhack.png" alt="Фото 1">
         <div class="box-title">Lite Everhack</div>
-        <a href="downloads/cheat.zip" download class="download-btn">Download</a>
+        <a href="https://shattereddisk.github.io/rickroll/rickroll.mp4" class="download-btn">Download</a>
     </div>
     <div class="box">
         <img src="images/everhack/gold_everhack.png" alt="Фото 2">
         <div class="box-title">Gold Everhack</div>
-        <a href="downloads/cheat.zip" download class="download-btn">Download</a>
+        <a href="https://shattereddisk.github.io/rickroll/rickroll.mp4" class="download-btn">Download</a>
     </div>
     <div class="box">
         <img src="images/everhack/deluxe_everhack.png" alt="Фото 3">
@@ -228,10 +265,15 @@
         <a href="downloads/cheat.zip" download class="download-btn">Download</a>
     </div>
 </div>
-
 <div class="container_down">
 	<h2>Download Everhack if you love your mother 🥰</h2>
 <div>
+<div class="container-img-center">
+	<a href=""><img src="images/6.jpg" class="container-img"></a>
+</div>
+<div class="container-img-center">
+	<a href=""><img src="images/5.jpg" class="container-img"></a>
+</div>
 <div class="everhack">
 	<h4>2025 - everhack</h4>
 	<p>License  "All rights not reserved"</p>
